# AVS-2projekt

./: .gitignore  CMakeLists.txt  MB-xrepka07.txt  mandelbrot
calculators/: BatchMandelCalculator.cc  BatchMandelCalculator.h  LineMandelCalculator.cc  LineMandelCalculator.h
